# DiagonalLatinSquares

./: .gitignore  CMakeLists.txt  ComputationTask.hpp  DLS.hpp  LICENSE  main.cpp
BoincProject/: dls_assimilator.cpp  dls_task.cpp  dls_work_generator.cpp
